# arduboy_minigolf

./: .gitattributes  .gitignore  ArduboyFX.cpp  ArduboyFX.h  CMakeLists.txt  README.md  SpritesU.hpp  _build.bat  _build_fx.bat  _build_fxdata.bat  _debug.txt  _elf.elf  _elf_fx.elf  _upload_fxdata.bat  arduboy_minigolf.ino  arduboy_minigolf.ino.arduino_leonardo.hex  ardugolf.hex  ardugolf_fx.arduboy  ardugolf_fx.hex  ardugolf_no_fmulsu.hex  camera.cpp  convert_sprite.py  div.cpp  draw.cpp  font.cpp  fx_courses.hpp  fxdata-build.py  fxdata-upload.py  fxdata.h  fxdata.txt  game.cpp  game.hpp  git.hpp.in  git_watcher.cmake  graphics.cpp  info.json  levels.cpp  main_emscripten.cpp  main_win32.cpp  mat.cpp  (+6 more)
flashcart_dev/: _write_flashcart.bat  flashcart-index.csv  flashcart-writer.py
img/: recording.webm.mov
levels/: .gitignore  level_00.blend  level_00.blend1  level_00.hpp  level_00.mtl  level_00_info.hpp  level_01.blend  level_01.hpp  level_01_info.hpp  level_02.blend  level_02.hpp  level_02_info.hpp  level_03.blend  level_03.hpp  level_03_info.hpp  level_04.blend  level_04.hpp  level_04_info.hpp  level_05.hpp  level_05_info.hpp  level_06.blend  level_06.hpp  level_06_info.hpp  level_07.blend  level_07.hpp  level_07_info.hpp  level_08.blend  level_08.hpp  level_08_info.hpp  level_09.hpp  level_09_info.hpp  level_10.blend  level_10.hpp  level_10_info.hpp  level_11.blend  level_11.blend1  level_11.hpp  level_11.mtl  level_11_info.hpp  level_12.blend1  (+22 more)
levels/blend_default/: .gitignore  level_02.blend  level_04.blend  level_05.blend  level_12.blend  level_13.blend  level_17.blend
levels/blend_serene/: level_01.blend
levels/blend_simple/: level_00.blend  level_00.blend1
tools/: bin2c.c  convert_obj.cpp  gen_fxsave.cpp  gen_math_tables.cpp  gen_sincos.cpp  level_editor.cpp  test_div.cpp  test_div_sin.cpp  test_math.cpp
